# openwebui-langgraph-pipe

./: .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml
agent/: main.py
