[project]
name = "openwebui-langgraph-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph==0.6.7",
    "langgraph-sdk==0.2.6",
    "open-webui==0.6.25",
    "langgraph-cli[inmem]==0.4.2"
]

[tool.ruff]
exclude = ["*"] # disable ruff
